# A2UI

./: .gitignore  pyproject.toml
.dart_tool/: package_config.json  package_graph.json  version
.github/workflows/: docs.yml  python_agent_sdk_build_and_test.yml  python_ci.yml  python_samples_build.yml  web_ci.yml
agent_sdks/kotlin/: build.gradle.kts
agent_sdks/python/a2ui_agent/: README.md  agent_development.md
agent_sdks/python/a2ui_agent/src/a2ui/: version.py
agent_sdks/python/a2ui_agent/src/a2ui/a2a/: parts.py
agent_sdks/python/a2ui_agent/src/a2ui/adk/: send_a2ui_to_client_toolset.py
agent_sdks/python/a2ui_agent/src/a2ui/basic_catalog/: constants.py  provider.py
agent_sdks/python/a2ui_agent/src/a2ui/schema/: catalog.py  constants.py  validator.py
agent_sdks/python/a2ui_agent/tests/adk/: test_send_a2ui_to_client_toolset.py
agent_sdks/python/a2ui_agent/tests/adk/a2a/: test_event_converter.py  test_part_converter.py
agent_sdks/python/a2ui_agent/tests/conformance/: test_a2a_integration.py  test_adk_extensions.py  test_conformance.py
agent_sdks/python/a2ui_agent/tests/elemental/: test_compiler.py  test_decompiler.py
agent_sdks/python/a2ui_agent/tests/integration/: verify_load_real.py
agent_sdks/python/a2ui_agent/tests/schema/: test_catalog.py  test_validator.py
docs/contributing/: triage.md
docs/guides/: mcp-apps-in-a2ui.md
docs/public/guides/: a2ui_over_mcp.md  client-setup.md
eval/: main.py  pyproject.toml
eval/a2ui_eval/strategies/: __init__.py  elemental.py
renderers/angular/: CHANGELOG.md  package.json  testing  tsconfig.json
renderers/angular/src/v0_9/testing/: public-api.ts  test-utils.ts
renderers/markdown/markdown-it/: CHANGELOG.md  package.json
renderers/web_core/: CHANGELOG.md  package.json
renderers/web_core/src/v0_9/state/: data-model.test.ts  data-model.ts
samples/agent/adk/: pyproject.toml
samples/agent/adk/custom-components-example/: pyproject.toml
samples/agent/adk/mcp_app_proxy/: pyproject.toml
samples/agent/adk/orchestrator/: pyproject.toml
samples/agent/adk/restaurant_finder/: README.md  pyproject.toml
samples/agent/adk/rizzcharts/python/: pyproject.toml
samples/client/flutter copy/eval/: README.md  pubspec.yaml
samples/client/flutter copy/eval/test/: infra_test.dart
samples/client/flutter copy/restaurant_booker/: .metadata  README.md
samples/client/flutter copy/restaurant_booker/windows/: CMakeLists.txt
samples/client/flutter/restaurant_booker/: README.md  pubspec.yaml
samples/client/flutter/restaurant_booker/lib/: a2a_transport.dart  agent_client.dart  ai_client.dart  ai_client_transport.dart  chat_session.dart  main.dart  message.dart  simple_chat.dart
samples/client/flutter/restaurant_booker/linux/: CMakeLists.txt
samples/client/flutter/restaurant_booker/web/: index.html  manifest.json
samples/client/lit/shell/: app.ts  tsconfig.json
samples/community/: .gitignore
samples/community/agent/adk/mcp_app_proxy/: README.md  __main__.py  pong_app.html  pyproject.toml
samples/community/client/angular/: angular.json  package.json
samples/mcp/a2ui-over-mcp-recipe/: pyproject.toml
scripts/: fix_format.sh
specification/proposals/elemental/: a2ui_elemental.md  implementation_plan.md
specification/v1_0/docs/: a2ui_protocol.md
tools/composer/src/test/: setup.ts
(+83 files in other folders)
